--- a/catalogue/copernicus-dem/__collection__.yaml
+++ b/catalogue/copernicus-dem/__collection__.yaml
@@ -1,7 +1,8 @@
 title: Copernicus Digital Elevation Model (DEM)
 dc:abstract:
-  The Copernicus DEM is a Digital Surface Model (DSM) that represents
-  the surface of the Earth including buildings, infrastructure and vegetation.
+  The Copernicus DEM is a Digital Surface Model (DSM) that represents the surface of the Earth including buildings, 
+  infrastructure and vegetation. Data were acquired through the TanDEM-X mission 
+  between 2011 and 2015. The datasets were made available for use in 2019 and will be maintained until 2026.
   We propose a subset of the whole corpus of data based on the most popular datasets.
 edh:maturity: published
 links:
