Align with STAC v1.1.0

--- a/catalogue/cmems-reanalysis/__collection__.yaml
+++ b/catalogue/cmems-reanalysis/__collection__.yaml
@@ -21,7 +21,7 @@ extent:
     interval:
     - - "1993-01-01T12:00:00Z"
       - "2020-12-31T12:00:00Z"
-license: various
+license: other
 keywords:
 - CMEMS
 - reanalysis
