--- a/catalogue/copernicus-dem/__collection__.yaml
+++ b/catalogue/copernicus-dem/__collection__.yaml
@@ -25,7 +25,7 @@ extent:
     interval:
     - - "2022-01-01T00:00:00Z"
       - null
-license: various
+license: other
 keywords:
 - Copernicus
 - DEM
