--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/__collection__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/__collection__.yaml
@@ -25,7 +25,7 @@ extent:
     interval:
     - - "2020-01-01"
       - "2040-01-01"
-license: various
+license: other
 keywords:
 - DestinE
 - digital twin
