--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
@@ -24,7 +24,7 @@ extent:
     interval:
     - - "2017-01-01"
       - "2020-01-01"
-license: various
+license: other
 keywords:
 - DestinE
 - digital twin
