--- a/catalogue/derived-GPWv4-Histsoc/__collection__.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/__collection__.yaml
@@ -23,7 +23,7 @@ links:
   rel: license
   href: https://creativecommons.org/licenses/by/4.0/legalcode
   type: text/html
-license: 
+license: other
 keywords:
 - Zenodo
 - population
