--- a/catalogue/egg4/__collection__.yaml
+++ b/catalogue/egg4/__collection__.yaml
@@ -23,7 +23,7 @@ extent:
     interval:
     - - "2003-01-01T00:00:00Z"
       - "2020-01-01T00:00:00Z"
-license: various
+license: other
 keywords:
 - CAMS
 - ECMWF
