--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/first-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/first-ingestion-step.yaml
@@ -8,7 +8,7 @@ steps:
     filename_or_obj:
       area: [ '90', '0', '-90', '360' ]
       dataset: reanalysis-era5-single-levels
-      date: [ 1940-01-01/2024-09-26 ]
+      date: [ 1940-01-01/2024-09-30 ]
       time: [ '00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00' ]
       product_type: reanalysis
       variable: [
@@ -110,7 +110,7 @@ steps:
   open_dataset_name: open_dataset_fix_era5_single_levels_names
   chunks: {latitude: 256, longitude: 256}
 
-  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 6}
+  robust_to_zarr_kwargs: {restart_dim: valid_time, time_restart_block: 6}
   to_zarr_kwargs: {
     store: s3://edc-intermediate/reanalysis-era5-single-levels-v0.zarr,
     write_empty_chunks: false
