--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/ingestion/ingestion-steps.yaml
@@ -2,13 +2,13 @@ steps:
 - xarray_open_kwargs:
     chunks: {}
     engine: zarr
-    filename_or_obj: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-v0.zarr
+    filename_or_obj: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
   chunks: {latitude: 512, longitude: 512, time: 120}
   robust_to_zarr_kwargs:
     restart_dim: longitude
     restart_block_size: 64
   to_zarr_kwargs:
-    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-monthly-v0.zarr
+    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-monthly-v0.zarr
     write_empty_chunks: false
   transform_kwargs:
     resample_kwargs:
