--- a/catalogue/copernicus-dem/GLO-30/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30/__item__.yaml
@@ -11,8 +11,8 @@ bbox:
 properties:
   start_datetime: '2022-01-01T12:00:00Z'
   end_datetime: '2022-01-01T12:00:00Z'
-  dc:abstract: GLO-30 is a Digital Elevation Model 
-   that offers global coverage at a resolution of 30 metres. Surface coverage is ~ 149 M km 2
+  dc:abstract: GLO-30 is a Digital Elevation Model that offers global coverage at
+    a resolution of 30 metres. Surface coverage is ~ 149 M km 2
   dc:access_rights: unrestricted
   dc:title: Copernicus DEM Global 30m
   edh:maturity: published
