--- a/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/__item__.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/__item__.yaml
@@ -12,7 +12,7 @@ properties:
   edh:maturity: published
   dc:abstract: This is a hybrid gridded dataset of demographic data for the world,
     given as 5-year population bands at a 0.25 degree grid resolution.
-  dc:title: "Hybrid gridded demographic data for the world, 1950-2020 0.25 degree resolution"
+  dc:title: Hybrid gridded demographic data for the world, 1950-2020 0.25 degree resolution
   start_datetime: '1950-01-01T00:00:00Z'
   end_datetime: '2020-01-01T00:00:00Z'
   dc:access_rights: unrestricted
@@ -24,8 +24,8 @@ properties:
       type: temporal
       step: PT1Y
       extent:
-      - "1950"
-      - "2020"
+      - '1950'
+      - '2020'
     latitude:
       type: spatial
       axis: y
