--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/first-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/first-ingestion-step.yaml
@@ -14,20 +14,13 @@ steps:
       variable: [
         'boundary_layer_height',
         'total_precipitation',
-        "instantaneous_moisture_flux",
-        "instantaneous_northward_turbulent_surface_stress",
         'geopotential',
-
 
         '2m_dewpoint_temperature',
         '2m_temperature',
         'mean_sea_level_pressure',
         'sea_surface_temperature',
         'surface_pressure',
-        'ice_temperature_layer_1',
-        'ice_temperature_layer_2',
-        'ice_temperature_layer_3',
-        'ice_temperature_layer_4',
         'maximum_2m_temperature_since_previous_post_processing',
         'minimum_2m_temperature_since_previous_post_processing',
         'skin_temperature',
@@ -59,10 +52,6 @@ steps:
 
         '10m_u_component_of_wind',
         '10m_v_component_of_wind',
-        '100m_u_component_of_wind',
-        '100m_v_component_of_wind',
-        '10m_u_component_of_neutral_wind',
-        '10m_v_component_of_neutral_wind',
 
         'high_cloud_cover',
         'low_cloud_cover',
@@ -96,7 +85,25 @@ steps:
         "maximum_total_precipitation_rate_since_previous_post_processing",
         "minimum_total_precipitation_rate_since_previous_post_processing",
         "precipitation_type",
-        "total_column_rain_water"
+        "total_column_rain_water",
+
+        "evaporation",
+        "potential_evaporation",
+        "runoff",
+        "sub_surface_runoff",
+        "surface_runoff",
+
+        "instantaneous_northward_turbulent_surface_stress",
+        "instantaneous_moisture_flux",
+        'ice_temperature_layer_1',
+        'ice_temperature_layer_2',
+        'ice_temperature_layer_3',
+        'ice_temperature_layer_4',
+        '10m_u_component_of_neutral_wind',
+        '10m_v_component_of_neutral_wind',
+        '100m_u_component_of_wind',
+        '100m_v_component_of_wind',
+
       ]
     request_chunker_kwargs: { time_dim: valid_time }
     request_chunks: { day: 20 }
