--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/__item__.yaml
@@ -17,6 +17,7 @@ properties:
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, monthly data on single-levels
   dc:description: High resolution Climate DT monthly on single levels - SSP3-7.0 -
     IFS-NEMO
+  datetime: '2020-01-01T00:00:00Z'
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2039-12-31T23:00:00Z'
   dc:subject:
