--- a/catalogue/copernicus-dem/GLO-90/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-90/__item__.yaml
@@ -9,8 +9,7 @@ bbox:
 - 180.0
 - 90.0
 properties:
-  start_datetime: '2022-01-01T12:00:00Z'
-  end_datetime: '2022-01-01T12:00:00Z'
+  datetime: '2022-01-01T12:00:00Z'
   dc:abstract: GLO-30 is a Digital Elevation Model that offers global coverage at
     a resolution of 30 metres. Surface coverage is ~ 149 M km 2
   dc:access_rights: unrestricted
