--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
@@ -17,6 +17,7 @@ properties:
   dc:access_rights: restricted
   dc:description: High resolution Climate DT monthly on single levels - SSP3-7.0 -
     ICON
+  datetime: '2021-01-01T00:00:00Z'
   start_datetime: '2021-01-01T00:00:00Z'
   end_datetime: '2030-12-31T23:00:00Z'
   dc:subject:
