--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -14,6 +14,7 @@ properties:
     evolution of land variables over several decades at an enhanced resolution compared
     to ERA5.
   dc:title: ERA5-Land hourly data
+  datetime: '1950-01-01T00:00:00Z'
   start_datetime: '1950-01-01T00:00:00Z'
   end_datetime: '2024-08-31T23:00:00Z'
   dc:access_rights: unrestricted
