--- a/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
@@ -25,6 +25,7 @@ properties:
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
     ocean-wave and land surface quantities
   dc:title: ERA5 hourly data on pressure levels
+  datetime: '1940-01-01T00:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
   end_datetime: '2023-12-31T23:00:00Z'
   dc:access_rights: unrestricted
