--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/ingestion/ingestion-steps.yaml
@@ -8,14 +8,49 @@ steps:
       activity: ScenarioMIP
       class: d1
       dataset: climate-dt
-      date: [ 2020-01-01/to/2038-12-31 ]
+      date: [ 2020-01-01/to/2039-12-31 ]
       experiment: SSP3-7.0
       expver: '0001'
       generation: 1
       levtype: sfc
       model: IFS-NEMO
-      # param: ['78', '79', '134', '137', '141', '148', '151', '159', '164', '165', '166', '167', '168', '176', '177', '186', '187', '188', '235', '260048']
-      param: ['141', '165', '166', '167', '168', '176', '177', '260048']
+      param: [
+        '134',
+        '78',
+        '79',
+        '137',
+        #'141',
+        '148',
+        '151',
+        '159',
+        '164',
+        #'165',
+        #'166',
+        #'167',
+        #'168',
+        '186',
+        '187',
+        '188',
+        '235',
+        '260048',
+        
+        '8',
+        '9',
+        '144',
+        '146',
+        '147',
+        '169',
+        '175',
+        #'176',
+        #'177',
+        '178',
+        '179',
+        '180',
+        '181',
+        '182',
+        '212',
+        '228',
+      ]
       realization: 1
       resolution: high
       stream: clte
@@ -30,9 +65,10 @@ steps:
   chunks: {latitude: 512, longitude: 512, time: 48}
   open_dataset_name: open_healpix_dataset
   robust_to_zarr_kwargs:
-    time_dim: time
-    time_restart_block: 10
-    retries: 2
+    restart_dim: time
+    restart_block_size: 10
+    retries: 10
   to_zarr_kwargs:
-    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
+    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0-dev.zarr
+    chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
     write_empty_chunks: false
