--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/__item__.yaml
@@ -17,9 +17,9 @@ properties:
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, monthly data on single-levels
   dc:description: High resolution Climate DT monthly on single levels - SSP3-7.0 -
     IFS-NEMO
-  datetime: '2020-01-01T00:00:00Z'
+  datetime: '2039-12-01T00:00:00Z'
   start_datetime: '2020-01-01T00:00:00Z'
-  end_datetime: '2039-12-31T23:00:00Z'
+  end_datetime: '2039-12-01T00:00:00Z'
   dc:subject:
   - DestinE
   - ECMWF
@@ -113,5 +113,5 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-  dc:extent: 188.3 TB
+  dc:extent: 258 GB
 search_weight: 65
