--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
@@ -17,9 +17,9 @@ properties:
   dc:access_rights: restricted
   dc:description: High resolution Climate DT monthly on single levels - SSP3-7.0 -
     ICON
-  datetime: '2021-01-01T00:00:00Z'
+  datetime: '2030-12-01T00:00:00Z'
   start_datetime: '2021-01-01T00:00:00Z'
-  end_datetime: '2030-12-31T23:00:00Z'
+  end_datetime: '2030-12-01T00:00:00Z'
   dc:subject:
   - DestinE
   - ECMWF
@@ -65,5 +65,5 @@ properties:
       type: data
       description: Total precipitation rate
       unit: kg m**-2 s**-1
-  dc:extent: 23.5 TB
+  dc:extent: 32 GB
 search_weight: 63
