--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/ingestion/ingestion-steps.yaml
@@ -24,7 +24,7 @@ steps:
         '165',
         '166',
         #'167',
-        #########'168', there is a problem with d2m
+        #########'168', there is a problem with d2m setup
         '235',
         '228164',
         #'260048',
