--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/ingestion/ingestion-steps.yaml
@@ -14,7 +14,23 @@ steps:
       generation: 1
       levtype: o2d
       model: IFS-NEMO
-      param: ['263000', '263001', '263003', '263004', '263008', '263100', '263101', '263124']
+      #param: ['263000', '263001', '263003', '263004', '263008', '263100', '263101', '263124']
+      param: [
+        #'263000',
+        #'263001',
+        #'263003',
+        #'263004',
+        #'263008',
+        '263009',
+        '263021',
+        '263022',
+        #'263100',
+        #'263101',
+        ###########'263114', there is a problem with avg_mlotst030 setup
+        '263121',
+        '263122',
+        #'263124',
+      ]
       realization: 1
       resolution: high
       stream: clte
@@ -29,8 +45,9 @@ steps:
   chunks: {latitude: 256, longitude: 256, time: 60}
   open_dataset_name: open_healpix_dataset
   robust_to_zarr_kwargs:
-    time_dim: time
-    time_restart_block: 16
+    restart_dim: time
+    restart_block_size: 36
   to_zarr_kwargs:
-    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
+    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0-dev.zarr
+    chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
     write_empty_chunks: false
