--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/ingestion/ingestion-steps.yaml
@@ -15,7 +15,17 @@ steps:
       levtype: pl
       levelist: [1000, 850, 700, 500, 300]
       model: IFS-NEMO
-      param: ['130', '157']
+      param: [
+        '60',
+        '129',
+        #'130',
+        '131',
+        '132',
+        '133',
+        '135',
+        #'157',
+        '246',
+      ]
       realization: 1
       resolution: high
       stream: clte
@@ -30,9 +40,10 @@ steps:
   chunks: {latitude: 512, longitude: 512, time: 96, isobaricInhPa: 1}
   open_dataset_name: open_healpix_dataset
   robust_to_zarr_kwargs:
-    time_dim: time
-    time_restart_block: 4
-    retries: 1
+    restart_dim: time
+    restart_block_size: 4
+    retries: 3
   to_zarr_kwargs:
-    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
+    store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-pl-v0-dev.zarr
+    chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
     write_empty_chunks: false
