--- a/catalogue/era5/reanalysis-era5-land/ingestion/first-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-land/ingestion/first-ingestion-step.yaml
@@ -65,12 +65,10 @@ steps:
       ]
     request_chunker_kwargs: {time_dim: valid_time}
     request_chunks: { day: 5 }
-    client_kwargs: { key: 00112233-4455-6677-c899-aabbccddeeff, url: https://cds-stable-bopen.copernicus-climate.eu/api }
+    client_kwargs: { key: 82fa6fcb-88a4-42c5-9380-5a1035f8f432, url: https://cds.climate.copernicus.eu/api }
 
   chunks: { latitude: 256, longitude: 256 }
-  robust_to_zarr_kwargs: { restart_dim: valid_time, restart_block_size: 16, retries: 3 }
+  robust_to_zarr_kwargs: { restart_dim: valid_time, restart_block_size: 2, retries: 3 }
   to_zarr_kwargs: {
-    store: 's3://edc-intermediate/reanalysis-era5-land-no-antartica-v0.zarr',
-    #write_empty_chunks: false
-    #safe_chunks: false
+    store: s3://edc-intermediate/reanalysis-era5-land-no-antartica-v0.zarr,
   }
