--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -49,7 +49,7 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 256.3 TB
+  dc:extent: 339.7 TB
   cube:variables:
     alnid:
       dimensions:
@@ -82,6 +82,14 @@ properties:
       - longitude
       type: data
       description: UV visible albedo for direct radiation (climatological)
+      unit: (0 - 1)
+    asn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow albedo
       unit: (0 - 1)
     blh:
       dimensions:
@@ -123,6 +131,38 @@ properties:
       type: data
       description: Convective rain rate
       unit: kg m**-2 s**-1
+    csf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Convective snowfall
+      unit: m of water equivalent
+    csfr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Convective snowfall rate water equivalent
+      unit: kg m**-2 s**-1
+    cvh:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: High vegetation cover
+      unit: (0 - 1)
+    cvl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Low vegetation cover
+      unit: (0 - 1)
     d2m:
       dimensions:
       - valid_time
@@ -146,6 +186,14 @@ properties:
       - longitude
       type: data
       description: Evaporation
+      unit: m of water equivalent
+    es:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow evaporation
       unit: m of water equivalent
     fdir:
       dimensions:
@@ -235,6 +283,22 @@ properties:
       type: data
       description: Ice temperature layer 4
       unit: K
+    lai_hv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Leaf area index, high vegetation
+      unit: m**2 m**-2
+    lai_lv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Leaf area index, low vegetation
+      unit: m**2 m**-2
     lblt:
       dimensions:
       - valid_time
@@ -283,6 +347,14 @@ properties:
       type: data
       description: Lake mix-layer temperature
       unit: K
+    lsf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large-scale snowfall
+      unit: m of water equivalent
     lshf:
       dimensions:
       - valid_time
@@ -314,6 +386,14 @@ properties:
       - longitude
       type: data
       description: Large scale rain rate
+      unit: kg m**-2 s**-1
+    lssfr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large scale snowfall rate water equivalent
       unit: kg m**-2 s**-1
     ltlt:
       dimensions:
@@ -395,6 +475,30 @@ properties:
       type: data
       description: Runoff
       unit: m
+    rsn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow density
+      unit: kg m**-3
+    sd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow depth
+      unit: m of water equivalent
+    sf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snowfall
+      unit: m of water equivalent
     skt:
       dimensions:
       - valid_time
@@ -411,6 +515,22 @@ properties:
       type: data
       description: Surface latent heat flux
       unit: J m**-2
+    slt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil type
+      unit: (Code table 4.213)
+    smlt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snowmelt
+      unit: m of water equivalent
     sp:
       dimensions:
       - valid_time
@@ -483,6 +603,38 @@ properties:
       type: data
       description: Sea surface temperature
       unit: K
+    stl1:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 1
+      unit: K
+    stl2:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 2
+      unit: K
+    stl3:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 3
+      unit: K
+    stl4:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 4
+      unit: K
     str:
       dimensions:
       - valid_time
@@ -515,6 +667,38 @@ properties:
       type: data
       description: Surface long-wave (thermal) radiation downward clear-sky
       unit: J m**-2
+    swvl1:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 1
+      unit: m**3 m**-3
+    swvl2:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 2
+      unit: m**3 m**-3
+    swvl3:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 3
+      unit: m**3 m**-3
+    swvl4:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 4
+      unit: m**3 m**-3
     t2m:
       dimensions:
       - valid_time
@@ -555,6 +739,14 @@ properties:
       type: data
       description: Total column rain water
       unit: kg m**-2
+    tcsw:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total column snow water
+      unit: kg m**-2
     tisr:
       dimensions:
       - valid_time
@@ -571,6 +763,14 @@ properties:
       type: data
       description: Total precipitation
       unit: m
+    tsn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Temperature of snow layer
+      unit: K
     tsr:
       dimensions:
       - valid_time
@@ -603,6 +803,22 @@ properties:
       type: data
       description: Top net long-wave (thermal) radiation, clear sky
       unit: J m**-2
+    tvh:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Type of high vegetation
+      unit: (Code table 4.234)
+    tvl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Type of low vegetation
+      unit: (Code table 4.234)
     u10:
       dimensions:
       - valid_time
