--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
@@ -8,6 +8,18 @@ bbox:
 - -90.0
 - 180.0
 - 90.0
+assets:
+  data:
+    href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-v0.zarr
+    roles:
+    - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
+search_weight: 63
 properties:
   edh:maturity: published
   dc:abstract: This dataset contains a selection of the variables available from the
@@ -66,4 +78,3 @@ properties:
       description: Total precipitation rate
       unit: kg m**-2 s**-1
   dc:extent: 23.5 TB
-search_weight: 63
