--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
@@ -8,6 +8,18 @@ bbox:
 - -90.0
 - 180.0
 - 90.0
+assets:
+  data:
+    href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
+    roles:
+    - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
+search_weight: 65
 properties:
   edh:maturity: published
   dc:abstract: This dataset contains a selection of the variables available from the
@@ -114,4 +126,3 @@ properties:
       description: 10 metre V wind component
       unit: m s**-1
   dc:extent: 188.3 TB
-search_weight: 65
