--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
@@ -60,6 +60,33 @@ properties:
       - -180.0
       - 180.0
   cube:variables:
+    clwc:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Specific cloud liquid water content
+      unit: kg kg**-1
+    pv:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Potential vorticity
+      unit: K m**2 kg**-1 s**-1
+    q:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Specific humidity
+      unit: kg kg**-1
     r:
       dimensions:
       - time
@@ -78,4 +105,40 @@ properties:
       type: data
       description: Temperature
       unit: K
-  dc:extent: 117.7 TB
+    u:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: U component of wind
+      unit: m s**-1
+    v:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: V component of wind
+      unit: m s**-1
+    w:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Vertical velocity
+      unit: Pa s**-1
+    z:
+      dimensions:
+      - time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Geopotential
+      unit: m**2 s**-2
+  dc:extent: 529.6 TB
