--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/ingestion/ingestion-steps.yaml
@@ -18,12 +18,12 @@ steps:
       param: [
         '60',
         '129',
-        #'130',
+        '130',
         '131',
         '132',
         '133',
         '135',
-        #'157',
+        '157',
         '246',
       ]
       realization: 1
@@ -45,5 +45,5 @@ steps:
     retries: 3
   to_zarr_kwargs:
     store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-pl-v0-dev.zarr
-    chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
+    # chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-pl-v0.zarr
     write_empty_chunks: false
