--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
@@ -61,6 +61,22 @@ properties:
       reference_system: 4326
       step: 0.044
   cube:variables:
+    blh:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Boundary layer height
+      unit: m
+    chnk:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Charnock
+      unit: Numeric
     d2m:
       dimensions:
       - time
@@ -69,6 +85,62 @@ properties:
       type: data
       description: 2 metre dewpoint temperature
       unit: K
+    e:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Evaporation
+      unit: m of water equivalent
+    ewss:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Time-integrated eastward turbulent surface stress
+      unit: N m**-2 s
+    hcc:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: High cloud cover
+      unit: (0 - 1)
+    lcc:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Low cloud cover
+      unit: (0 - 1)
+    mcc:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Medium cloud cover
+      unit: (0 - 1)
+    msl:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Mean sea level pressure
+      unit: Pa
+    nsss:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Time-integrated northward turbulent surface stress
+      unit: N m**-2 s
     sd:
       dimensions:
       - time
@@ -77,6 +149,54 @@ properties:
       type: data
       description: Snow depth
       unit: m of water equivalent
+    sf:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Snowfall
+      unit: m of water equivalent
+    skt:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Skin temperature
+      unit: K
+    slhf:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Time-integrated surface latent heat net flux
+      unit: J m**-2
+    sp:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface pressure
+      unit: Pa
+    sro:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface runoff
+      unit: m
+    sshf:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Time-integrated surface sensible heat net flux
+      unit: J m**-2
     ssr:
       dimensions:
       - time
@@ -85,6 +205,22 @@ properties:
       type: data
       description: Surface net short-wave (solar) radiation
       unit: J m**-2
+    ssrd:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface short-wave (solar) radiation downwards
+      unit: J m**-2
+    ssro:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Sub-surface runoff
+      unit: m
     str:
       dimensions:
       - time
@@ -92,6 +228,14 @@ properties:
       - longitude
       type: data
       description: Surface net long-wave (thermal) radiation
+      unit: J m**-2
+    strd:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface long-wave (thermal) radiation downwards
       unit: J m**-2
     t2m:
       dimensions:
@@ -101,6 +245,54 @@ properties:
       type: data
       description: 2 metre temperature
       unit: K
+    tcc:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total cloud cover
+      unit: (0 - 1)
+    tciw:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total column cloud ice water
+      unit: kg m**-2
+    tclw:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total column cloud liquid water
+      unit: kg m**-2
+    tcwv:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total column vertically-integrated water vapour
+      unit: kg m**-2
+    tisr:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: TOA incident short-wave (solar) radiation
+      unit: J m**-2
+    tp:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Total precipitation
+      unit: m
     tprate:
       dimensions:
       - time
@@ -109,6 +301,22 @@ properties:
       type: data
       description: Total precipitation rate
       unit: kg m**-2 s**-1
+    tsr:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Top net short-wave (solar) radiation
+      unit: J m**-2
+    ttr:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Top net long-wave (thermal) radiation
+      unit: J m**-2
     u10:
       dimensions:
       - time
@@ -125,4 +333,4 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-  dc:extent: 188.3 TB
+  dc:extent: 800.2 TB
