--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/ingestion/ingestion-steps.yaml
@@ -19,15 +19,15 @@ steps:
         '78',
         '79',
         '137',
-        #'141',
+        '141',
         '148',
         '151',
         '159',
         '164',
-        #'165',
-        #'166',
-        #'167',
-        #'168',
+        '165',
+        '166',
+        '167',
+        '168',
         '186',
         '187',
         '188',
@@ -41,8 +41,8 @@ steps:
         '147',
         '169',
         '175',
-        #'176',
-        #'177',
+        '176',
+        '177',
         '178',
         '179',
         '180',
@@ -71,5 +71,5 @@ steps:
     scheduler: synchronous
   to_zarr_kwargs:
     store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0-dev.zarr
-    chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
+    # chunk_store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
     # write_empty_chunks: false
