Monthly efficient production

--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc-monthly/ingestion/ingestion-steps.yaml
@@ -6,11 +6,15 @@ steps:
   chunks: {latitude: 256, longitude: 256, time: 120}
   robust_to_zarr_kwargs:
     restart_dim: longitude
-    restart_block_size: 64
+    restart_block_size: 1
+    scheduler: null
   to_zarr_kwargs:
     store: s3://edc-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-monthly-v0.zarr
     write_empty_chunks: false
   transform_kwargs:
+    # data_vars:
+    #   - u10
+    #   - v10
     resample_kwargs:
       indexer:
         time: MS
