--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -41,6 +41,7 @@ properties:
   cube:dimensions:
     valid_time:
       type: temporal
+      axis: t
       extent:
       - '1979-01-01T00:00:00Z'
       - '2024-12-01T00:00:00Z'
