--- a/catalogue/era5/reanalysis-era5-single-levels-monthly-means/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-monthly-means/__item__.yaml
@@ -40,6 +40,7 @@ properties:
   cube:dimensions:
     valid_time:
       type: temporal
+      axis: t
       extent:
       - '1940-01-01T00:00:00Z'
       - '2024-09-01T00:00:00Z'
