--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON-monthly/__item__.yaml
@@ -40,9 +40,10 @@ properties:
   cube:dimensions:
     time:
       type: temporal
+      axis: t
       extent:
-      - null
-      - null
+      - '2021-01-01T00:00:00Z'
+      - '2030-12-01T00:00:00Z'
       step: PT1H
     latitude:
       type: spatial
