--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
@@ -29,7 +29,7 @@ properties:
   dc:access_rights: restricted
   dc:description: High resolution Climate DT hourly on single levels - SSP3-7.0 -
     ICON
-  datetime: '2021-01-01T00:00:00Z'
+  datetime: '2030-12-31T23:00:00Z'
   start_datetime: '2021-01-01T00:00:00Z'
   end_datetime: '2030-12-31T23:00:00Z'
   dc:subject:
@@ -40,9 +40,10 @@ properties:
   cube:dimensions:
     time:
       type: temporal
+      axis: t
       extent:
-      - null
-      - null
+      - '2021-01-01T00:00:00Z'
+      - '2030-12-31T23:00:00Z'
       step: PT1H
     latitude:
       type: spatial
