--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
@@ -1,3 +1,8 @@
+links:
+- title: Copernicus Sentinel-1 GRD
+  rel: derived_from
+  href: https://documentation.dataspace.copernicus.eu/Data/SentinelMissions/Sentinel1.html#sentinel-1-level-1-ground-range-detected-grd
+  type: text/html
 bbox:
 - {{ (cookiecutter.utm_zone[:-1]|int - 1) * 6.0 - 180  }}
 - 36.0
