--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-117/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-117/__item__.yaml
@@ -10,11 +10,11 @@ bbox:
 - 48.0
 properties:
   edh:maturity: draft
-  datetime: '2022-01-01T12:00:00Z'
-  dc:abstract: Sentinel-1 RTC on relative orbit 117 on UTM 32N
+  datetime: '2024-12-31T00:00:00Z'
+  dc:abstract: Sentinel-1 ARD for relative orbit 117 on UTM 32N
   dc:access_rights: unrestricted
-  dc:title: Sentinel-1 RTC on relative orbit 117 on UTM 32N
-  dc:description: Sentinel-1 RTC on relative orbit 117 on UTM 32N
+  dc:title: Sentinel-1 ARD for relative orbit 117 on UTM 32N
+  dc:description: Sentinel-1 ARD for relative orbit 117 on UTM 32N
   dc:subject:
   - Copernicus
   - Sentinel-1
@@ -35,15 +35,25 @@ properties:
       extent:
       - 200005.0
       - 799995.0
+    date:
+      type: temporal
+      axis: t
+      extent:
+      - '2024-01-06T00:00:00Z'
+      - '2024-12-31T00:00:00Z'
   cube:variables:
     gtc:
       dimensions:
+      - date
+      - polarization
       - y
       - x
       type: data
       description: beta nought
       unit: m2 m-2
-  dc:extent: 100 GB
+  dc:extent: 1.9 TB
+  start_datetime: '2024-01-06T00:00:00Z'
+  end_datetime: '2024-12-31T00:00:00Z'
 assets:
   data:
     href: https://data.earthdatahub.destine.eu/sentinel-1-ard/IW-UTM-RO-italy-v0/32N/117
