--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-15/plots.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-15/plots.yaml
@@ -1,10 +1,10 @@
 plots:
-- var: "dem"
-  isel: {"x": [125, null, 250], "y": [125, null, 250]}
+- var: "gtc"
+  time_dim: "date"
+  coarsen: {"x": 50, "y": 50}
   plot_kwargs: {
-    "vmax": 5000,
-    "vmin": -1285,
-    "cmap": "terrain",
-    "central_longitude": 0,
-    "tickers_numbers": [30, 60]
+    "vmax": 1,
+    "vmin": 0,
+    "cmap": "greys",
+    "central_longitude": 0
   }
